; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_nfs2xdr.c_decode_stat.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_nfs2xdr.c_decode_stat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xdr_stream = type { i32 }

@EIO = common dso_local global i32 0, align 4
@NFS_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xdr_stream*, i32*)* @decode_stat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_stat(%struct.xdr_stream* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.xdr_stream*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64*, align 8
  store %struct.xdr_stream* %0, %struct.xdr_stream** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.xdr_stream*, %struct.xdr_stream** %4, align 8
  %8 = call i64* @xdr_inline_decode(%struct.xdr_stream* %7, i32 4)
  store i64* %8, i64** %6, align 8
  %9 = load i64*, i64** %6, align 8
  %10 = icmp ne i64* %9, null
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  %13 = call i64 @unlikely(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %2
  %16 = load i32, i32* @EIO, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %3, align 4
  br label %38

18:                                               ; preds = %2
  %19 = load i64*, i64** %6, align 8
  %20 = load i64, i64* %19, align 8
  %21 = load i32, i32* @NFS_OK, align 4
  %22 = call i64 @cpu_to_be32(i32 %21)
  %23 = icmp ne i64 %20, %22
  %24 = zext i1 %23 to i32
  %25 = call i64 @unlikely(i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %18
  br label %30

28:                                               ; preds = %18
  %29 = load i32*, i32** %5, align 8
  store i32 0, i32* %29, align 4
  store i32 0, i32* %3, align 4
  br label %38

30:                                               ; preds = %27
  %31 = load i64*, i64** %6, align 8
  %32 = call i32 @be32_to_cpup(i64* %31)
  %33 = load i32*, i32** %5, align 8
  store i32 %32, i32* %33, align 4
  %34 = load %struct.xdr_stream*, %struct.xdr_stream** %4, align 8
  %35 = load i32*, i32** %5, align 8
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @trace_nfs_xdr_status(%struct.xdr_stream* %34, i32 %36)
  store i32 0, i32* %3, align 4
  br label %38

38:                                               ; preds = %30, %28, %15
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i64* @xdr_inline_decode(%struct.xdr_stream*, i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i64 @cpu_to_be32(i32) #1

declare dso_local i32 @be32_to_cpup(i64*) #1

declare dso_local i32 @trace_nfs_xdr_status(%struct.xdr_stream*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
